Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
0.10.0
-
None
-
None
-
Win32
Description
I use the VLD (visual leak detector) with my applications and log4cxx and noticed quite some memory leaks. Well, in my specific application a huge number of threads might be spawn in the course of time. Is there a way to get rid of the ThreadSpecificData again? My application runs on Win32, and so the APRInitializer::tlsDestruct() won't be called.
Consequently I've patched log4cxx by introducing a method to explicitly free the ThreadSpecificData, but that's of course not transparent. Is there an intend to provide the same behaviour of the APR for Win32 eventually? Any other ideas about that problem?
Call freeCurrentData() just before your thread terminates in order to free the thread specific data.