LOGCXX-117: Memory leak with ThreadSpecificData